fix: update space between the button and the content of the popup on mobile

--- a/src/components/Posts/components/Popup/style.css
+++ b/src/components/Posts/components/Popup/style.css
@@ -141,7 +141,8 @@
     margin-bottom: 20px;
   }
   .popup__left {
-    padding-right:0
+    padding-right:0;
+    margin-bottom:30px;
   }
 }
 
